--- a/wwwroot/css/admin.css
+++ b/wwwroot/css/admin.css
@@ -1,4 +1,4 @@
-body {
+﻿body {
     font-size: .875rem;
   }
   
@@ -146,4 +146,17 @@ body {
 .btn{
   margin: 0 10px;
   color: #289fd2;
+}
+
+/* اضافه کردن به فایل CSS شما */
+
+table td {
+    word-break: break-word; /* اطمینان از شکستن کلمات طولانی به صورت خودکار */
+    overflow: hidden; /* جلوگیری از نمایش متن اضافی خارج از سلول */
+    text-overflow: ellipsis; /* نمایش سه نقطه در انتهای متن در صورت طولانی بودن */
+    max-width: 200px; /* محدود کردن عرض سلول (در صورت نیاز می‌توانید این مقدار را تغییر دهید) */
+}
+
+.table-responsive {
+    overflow-x: auto; /* در صورت نیاز اسکرول افقی به جدول اضافه می‌کند */
 }
