--- a/Views/User/DisplayUsers.cshtml
+++ b/Views/User/DisplayUsers.cshtml
@@ -35,7 +35,8 @@
                                 <td>@user.UserName</td>
                                 <td>@user.password</td>
                                 <td>
-                                    <a class="delete-button" asp-action="DeleteUser", asp_route_id = "@user.Phonenumber">حذف کردن</a>
+                                    <a class="delete-button" asp-action="DeleteUser" asp-route-phonenumber="@user.Phonenumber">حذف کردن</a>
+
                                 </td>
                             </tr>
                        }
